--- a/frontend/projectStyle.css
+++ b/frontend/projectStyle.css
@@ -8,7 +8,7 @@
     padding: 0;
     box-sizing: border-box;
     font-family: 'Poppins', sans-serif;
-    font-weight: 600;
+    font-weight: 800;
     color: #444;
   }
   
@@ -78,12 +78,13 @@ h1 {
   line-height: 1.35;
   padding-bottom: 1rem;
   text-align: center;
-  font-weight: 800;
+}
+.content li{
+  font-weight: 600;
 }
 h2{
     padding-bottom: 1.5rem;
     padding-left: 1rem;
-    font-weight: 800;
 }
 h4 {
     font-size: 1.5rem;
@@ -102,6 +103,7 @@ ul {
 }
 .tools li{
     padding-right: 2rem;
+    font-weight: 600;
 }
 
 hr{
